<resources>

    <string name="app_name">Düsseldorf Guide</string>

    <!-- Activities and Fragments names -->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Messages -->
    <string name="checking_credentials">Checking Credentials</string>
    <string name="bad_name_pass">Bad name or password</string>
    <string name="cannot_connect">Cannot connect</string>
    <string name="no_connection">Connect device to internet please</string>
    <string name="getting_user">Getting user</string>
    <string name="getting_image">Getting image</string>
    <string name="type_old_password">Type the old password</string>
    <string name="type_new_password">Type the new password</string>
    <string name="password_changed">Password changed</string>
    <string name="exchange_password_problem">Exchange password problem</string>
    <string name="bad_old_password">Bad old password</string>
    <string name="getting_location_problem">Getting location problem</string>
    <string name="fill_all_fields">Fill all fields and load image please</string>
    <string name="place_saved">Place saved</string>
    <string name="uploading_image">Uploading image</string>
    <string name="need_to_be_premium">You need be premium</string>
    <string name="type_name_before">Type name before</string>
    <string name="comment_sent">Comment sent</string>
    <string name="sending_comment_problem">Sending comment problem</string>
    <string name="cant_add_comment">Can not add comment</string>
    <string name="enable_position">Enable location for an right performance please</string>

    <!-- View texts -->
    <string name="connect">Connect</string>
    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="places">Places</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="are_you_new">Are you new?</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email">Email</string>
    <string name="avatar">Avatar</string>
    <string name="upload_avatar">Upload avatar</string>
    <string name="save">Save</string>
    <string name="load_image_failed">Load image failed</string>
    <string name="uploading_information">Uploading information</string>
    <string name="profile_saved">Profile saved</string>
    <string name="saving_profile_problem">Saving profile problem</string>
    <string name="name_already_exist">Name already exist</string>
    <string name="no_name">Type the name please</string>
    <string name="no_pass">Type a password please</string>
    <string name="no_mail">Type a email address please</string>
    <string name="edit_password">Edit password</string>
    <string name="my_comments">My comments</string>
    <string name="town">Town</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="street">Street</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="load_image">Load Image</string>
    <string name="current_location">Current location</string>
    <string name="add_place">Add place</string>
    <string name="user">User</string>
    <string name="comment">Comment</string>
    <string name="new_comment">New Comment</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="getting_comments">Getting comments</string>

    <!-- String arrays para preferencias -->
    <string name="map_type">Map Type</string>
    <string name="map_type_summary">Select map type</string>
    <string-array name="map_types">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>

    <string-array name="map_types_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="marker_colour">Marker colour</string>
    <string-array name="marker_colours">
        <item>Red</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="marker_colours_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="title_activity_edit_account">EditAccountActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uploading_comment">Uploading comment</string>
    <string name="changing_password">Changing password</string>
    <string name="getting_places">Getting places</string>

</resources>
